
** cl-lib.el
+++
*** 'cl-defstruct' has a new ':noinline' argument to prevent inlining
its functions.

+++
*** 'cl-defstruct' slots accept a ':documentation' property

---
*** 'cl-values-list' will now signal an error if its argument isn't a list.

** doc-view.el
*** New commands 'doc-view-presentation' and 'doc-view-fit-window-to-page'.
*** Added support for password-protected PDF files

** Ido
*** New user option 'ido-big-directories' to mark directories whose
names match certain regular expressions as big.  Ido won't attempt to
list the contents of such directories when completing file names.

** Minibuffer

---
*** Minibuffer now uses 'minibuffer-message' to display error messages
at the end of the active minibuffer.

** map.el
*** Now also understands plists.
*** Now defined via generic functions that can be extended via 'cl-defmethod'.
*** Deprecate the 'map-put' macro in favor of a new 'map-put!' function.
*** 'map-contains-key' now returns a boolean rather than the key.
*** Deprecate the 'testfn' args of 'map-elt' and 'map-contains-key'.
*** New generic function 'map-insert'.

+++
** seq.el
New convenience functions 'seq-first' and 'seq-rest' give easy access
to respectively the first and all but the first elements of sequences.

The new predicate function 'seq-contains-p' should be used instead of
the now obsolete 'seq-contains'.

---
** Follow mode
In the current follow group of windows, "ghost" cursors are no longer
displayed in the non-selected follow windows.  To get the old behavior
back, customize 'follow-hide-ghost-cursors' to nil.

+++
** New variable 'warning-fill-column' for 'display-warning'.

** Windmove

*** 'windmove-create-window' when non-nil makes a new window on moving off
the edge of the frame.

*** Windmove supports directional window display and selection.
The new command 'windmove-display-default-keybindings' binds default
keys with provided modifiers (by default, Shift-Meta) to the commands