@@ -547,6 +547,7 @@ its functions.
 ** doc-view.el
 *** New commands 'doc-view-presentation' and 'doc-view-fit-window-to-page'.
 *** Added support for password-protected PDF files
+*** Added support for other file formats via Pandoc
 
 ** Ido
 *** New user option 'ido-big-directories' to mark directories whose
